--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "docker_web_app",
+  "name": "nodejs_app",
   "version": "1.0.0",
-  "description": "Node.js on Docker",
-  "author": "Naresh Babu Kamani <naresh240.qis@gmail.com>",
+  "description": "Node.js",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
